[package]
name = "bcfutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.38.2"
serde = { version = "1.0.136", features = ["derive"] }
csv = "1.1.6"
clap = { version = "3.1.12", features = ["derive"] }
linear-map = "1.2.0"

[profile.release]
opt-level = 3
